coonfig.ini cred remove

--- a/Email config.ini
+++ b/Email config.ini
@@ -1,4 +1,4 @@
 [Email]
 sender_email = waqarmaqbool@vasista.in
 receiver_emails = vickywaqar111@gmail.com,dr.hajiwaqarastro@gmail.com,waqrmaqboolwani1@gmail.com
-password = waqar@786
+password = waqarkku
